0.10.0 (currently working on)
- [#5071] Fix: Drop any reference to static_info_tables_taxes
- [#4836] Fix: Add compatibility with static_info_tables 2.3.x-6.0.x
- [#5070] Fix: Test failure if sr_feuser_register is not installed
- [#5062] Fix: Test crash in tx_seminars_OldModel_EventTest in 6.2
- [#5061] Fix: Test error in tx_seminars_FrontEnd_DefaultControllerTest in 6.2
- [#4649] Fix: Also recognize first/last name for current TYPO3 versions
- [#5024] Fix: Test errors in tx_seminars_OldModel_RegistrationTest in TYPO3 CMS 6.1
- [#5023] Fix: Test failures in tx_seminars_FrontEnd_EventEditorTest in TYPO3 CMS 6.1
- [#5026] Fix: Deprecation messages about the flash message API in TYPO3 CMS 6.1
- [#5022] Fix: Test errors in tx_seminars_FrontEnd_RequirementsListTest with TYPO3 CMS 6.1
- [#4709] Fix: Crash on the registration page with static_info_tables 6.0.4 under TYPO3 6.0.6
- [#5021] Fix: Test error in tx_seminars_BackEnd_GeneralEventMailFormTest in TYPO3 CMS 6.1
- [#5020] Fix: Error message: The extension CSS Styled Content is not loaded
- [#5016] Fix: Stop including template.php in pi2
- [#5008] Fix: Call loadTCA only for TYPO3 CMS < 6.1
- [#4572] Fix: Add .htaccess to all folders with private resources
- [#4648] Fix: Drop early __destruct calls
- [#4879] Fix: Use t3lib_div::makeInstance instead of ObjectFactory::make
- [#5003] Fix: Make sure the FORMidable configuration always is an array
- [#4998] Cleanup: Use type[] instead of array<type>
- [#4986] Fix: Getter for billing address phone uses the wrong field name
- [#4985] Fix: Add the additional attendees before sending the e-mails
- [#4983] Feature: Add a hook point that would allow a HTML subpart to the notification e-mail
- [#4961] Feature: Use separate FE user data labels in the notification e-mail
- [#4958] Feature: Add wrappers around the billing address fields on the confirmation page
- [#4957] Feature: Add wrappers for the FE user data on the first registration page