@@ -1,11 +1,9 @@
 <?php
 // DO NOT REMOVE OR CHANGE THESE 3 LINES:
 define('TYPO3_MOD_PATH', '../typo3conf/ext/seminars/BackEnd/');
-$BACK_PATH='../../../../typo3/';
 $MCONF['name']='web_txseminarsM2';
+$MCONF['script'] = '_DISPATCH';
 
 $MCONF['access'] = 'user,group';
-$MCONF['script'] = 'index.php';
-
 $MLANG['default']['tabs_images']['tab'] = 'moduleicon.gif';
 $MLANG['default']['ll_ref'] = 'LLL:EXT:seminars/BackEnd/locallang_mod.xml';
