@@ -22,22 +22,6 @@
 * This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
-unset($MCONF);
-$MCONF = array();
-
-require_once('conf.php');
-require_once($BACK_PATH . 'init.php');
-require_once($BACK_PATH . 'template.php');
-
-$LANG->includeLLFile('EXT:lang/locallang_common.xml');
-$LANG->includeLLFile('EXT:lang/locallang_show_rechis.xml');
-$LANG->includeLLFile('EXT:lang/locallang_mod_web_list.xml');
-$LANG->includeLLFile('EXT:seminars/BackEnd/locallang.xml');
-$LANG->includeLLFile('EXT:seminars/pi2/locallang.xml');
-
-// This checks permissions and exits if the users has no permission for entry.
-$BE_USER->modAccess($MCONF, 1);
-
 /**
  * Back-end module "Events".
  *
@@ -367,6 +351,15 @@ class tx_seminars_module2 extends tx_seminars_BackEnd_Module {
 if (defined('TYPO3_MODE') && $GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/seminars/BackEnd/index.php']) {
 	include_once($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/seminars/BackEnd/index.php']);
 }
+
+// This checks permissions and exits if the users has no permission for entry.
+$GLOBALS['BE_USER']->modAccess($GLOBALS['MCONF'], TRUE);
+
+$GLOBALS['LANG']->includeLLFile('EXT:lang/locallang_common.xml');
+$GLOBALS['LANG']->includeLLFile('EXT:lang/locallang_show_rechis.xml');
+$GLOBALS['LANG']->includeLLFile('EXT:lang/locallang_mod_web_list.xml');
+$GLOBALS['LANG']->includeLLFile('EXT:seminars/BackEnd/locallang.xml');
+$GLOBALS['LANG']->includeLLFile('EXT:seminars/pi2/locallang.xml');
 
 /** @var $SOBE tx_seminars_module2 */
 $SOBE = t3lib_div::makeInstance('tx_seminars_module2');
