@@ -19,7 +19,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'conflicts' => 'dbal,sourceopt',
 	'priority' => '',
 	'loadOrder' => '',
-	'module' => 'BackEnd,BackEndExtJs',
+	'module' => 'BackEnd',
 	'state' => 'beta',
 	'internal' => 0,
 	'uploadfolder' => 1,
